--- a/src/components/Counter/Counter.scss
+++ b/src/components/Counter/Counter.scss
@@ -1,6 +1,7 @@
 @import "../../styles/themes";
 @import "../../styles/typography";
 @import "../../styles/global-css-settings";
+@import "../../styles/keyframes";
 
 
 .monday-style-counter {
@@ -11,7 +12,7 @@
   transform-origin: center;
 
   &--with-animation {
-    animation: circle-pop var(--motion-expressive-short);
+    animation: counter-pop-elastic var(--motion-expressive-short);
   }
 
   &--size {
@@ -62,7 +63,7 @@
       position: relative;
       opacity: 0;
       transform: translateY(-15px);
-      transition: transform var(--motion-productive-long) var(--motion-timing-enter), opacity var(--motion-productive-short);
+      transition: transform var(--motion-productive-long) var(--motion-timing-exit), opacity var(--motion-productive-short);
     }
   }
 
@@ -119,21 +120,7 @@
     }
   }
 
-  @keyframes circle-pop {
-    0% {
-      transform: scale(1);
-    }
-
-    33% {
-      transform: scale(1.1);
-    }
-
-    66% {
-      transform: scale(0.97);
-    }
-
-    100% {
-      transform: scale(1);
-    }
+  @include keyframe(counter-pop-elastic){
+    @include pop-elastic();
   }
 }
