Feature/refactor components motion keyframes (#882)
* Add global keyframes mixins and a loader.

* Refactor components animation using motion mixins.

* fix stylelint issue.

* Remove debug code.

--- a/src/components/Toast/__stories__/toast.stories.scss
+++ b/src/components/Toast/__stories__/toast.stories.scss
@@ -35,3 +35,9 @@
     width: 390px;
   }
 }
+
+// overriding margin for storybook wrapper
+.monday-storybook_multiple-story-elements-wrapper .monday-style-toast{
+  margin-right:auto;
+  margin-left:auto;
+}
