--- a/src/styles/_keyframes.scss
+++ b/src/styles/_keyframes.scss
@@ -1,17 +1,17 @@
 // KEYFRAMES: This loader imports animation mixins content for reuse.
 
 // Loading available keyframe content
-@import "src/styles/keyframes/pop/pop-elastic";
-@import "src/styles/keyframes/pop/pop-in";
-@import "src/styles/keyframes/pop/pop-in-from-trigger";
-@import "src/styles/keyframes/pop/pop-in-emphasized";
-@import "src/styles/keyframes/pop/pop-in-elastic";
-@import "src/styles/keyframes/pop/pop-in-elastic-bold";
-@import "src/styles/keyframes/pop/pop-out-from-trigger";
-@import "src/styles/keyframes/spin/spin-in-emphasized";
-@import "src/styles/keyframes/slide/slide-in";
-@import "src/styles/keyframes/slide/slide-in-elastic";
-@import "src/styles/keyframes/slide/slide-out";
+@import "keyframes/pop/pop-elastic";
+@import "keyframes/pop/pop-in";
+@import "keyframes/pop/pop-in-from-trigger";
+@import "keyframes/pop/pop-in-emphasized";
+@import "keyframes/pop/pop-in-elastic";
+@import "keyframes/pop/pop-in-elastic-bold";
+@import "keyframes/pop/pop-out-from-trigger";
+@import "keyframes/spin/spin-in-emphasized";
+@import "keyframes/slide/slide-in";
+@import "keyframes/slide/slide-in-elastic";
+@import "keyframes/slide/slide-out";
 
 // MIXIN: Keyframe
 // This mixin defines a keyframe definition using @content.
