--- a/src/config/tokens/core/_core-fonts.scss
+++ b/src/config/tokens/core/_core-fonts.scss
@@ -25,10 +25,9 @@ $font-weight-normal: 400;
 $font-weight-bold: 500;
 
 // - Font family
-$font-family: "Roboto", "Rubik", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
-$h1-font-family: "Poppins", "Roboto", "Rubik", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
+$font-family: "Manrope", "Roboto", "Rubik", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
 $title-font-family: "Poppins", "Roboto", "Rubik", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
-$subtext-font-family: "Manrope", "Roboto", "Rubik", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
+$h1-font-family: var(--title-font-family);
 
 // - Font smoothing
 $font-smoothing-webkit: antialiased;
