--- a/src/components/AttentionBox/AttentionBox.scss
+++ b/src/components/AttentionBox/AttentionBox.scss
@@ -96,7 +96,7 @@
 }
 
 .monday-style-attention-box-component{
-  font-family: var(--subtext-font-family);
+  font-family: var(--font-family);
 }
 
 .monday-style-attention-box-component__title-container__title{
