--- a/src/components/FieldLabel/FieldLabel.scss
+++ b/src/components/FieldLabel/FieldLabel.scss
@@ -19,5 +19,5 @@
 }
 
 .label-component--wrapper .label-component--icon{
-  font-family: var(--subtext-font-family)
+  font-family: var(--font-family)
 }
