--- a/src/components/Menu/MenuTitle/MenuTitle.scss
+++ b/src/components/Menu/MenuTitle/MenuTitle.scss
@@ -39,5 +39,5 @@
 
 .monday-style-menu-title .monday-style-menu-title__caption--center::before,
   .monday-style-menu-title__caption--center::after{
-  font-family: var(--subtext-font-family);
+  font-family: var(--font-family);
 }
