--- a/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.scss
+++ b/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.scss
@@ -252,9 +252,9 @@
 }
 
 .monday-style-step-indicator-component{
-  font-family: var(--subtext-font-family);
+  font-family: var(--font-family);
 }
 
 .monday-style-step-indicator-component__text-container__subtitle__text{
-  font-family: var(--subtext-font-family);
+  font-family: var(--font-family);
 }
