--- a/src/components/TextField/TextField.scss
+++ b/src/components/TextField/TextField.scss
@@ -294,13 +294,13 @@
 }
 
 .input-component .input-component__input-wrapper .input-component__icon--container .input-component__icon{
-  font-family: var(--subtext-font-family);
+  font-family: var(--font-family);
 }
 
 .input-component .input-component__input-wrapper.input-component__input-wrapper--size-medium .input-component__icon--container .input-component__icon{
-  font-family: var(--subtext-font-family);
+  font-family: var(--font-family);
 }
 
 .input-component .input-component__input-wrapper.input-component__input-wrapper--size-large .input-component__icon--container .input-component__icon{
-  font-family: var(--subtext-font-family);
+  font-family: var(--font-family);
 }
