--- a/src/components/ModalHeader/ModalHeader.module.scss
+++ b/src/components/ModalHeader/ModalHeader.module.scss
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   flex-direction: column;
   margin-block-end: var(--spacing-large);
 
