Feature/sergeyro/font change (#884)
* Remove Poppins link from html

* Update monday-ui-style version

* Update font by script

* Remove accidently added yarn.lock

* Rename subtitle-font-family to font-family

* Update monday-ui-style version

* Merge branch 'master' into feature/sergeyro/font-change

# Conflicts:
#	src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.scss

--- a/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.scss
+++ b/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.scss
@@ -242,3 +242,10 @@
   @include pop-elastic();
 }
 
+.monday-style-step-indicator-component{
+  font-family: var(--font-family);
+}
+
+.monday-style-step-indicator-component__text-container__subtitle__text{
+  font-family: var(--font-family);
+}
