--- a/src/components/AttentionBox/AttentionBox.scss
+++ b/src/components/AttentionBox/AttentionBox.scss
@@ -94,3 +94,11 @@
     }
   }
 }
+
+.monday-style-attention-box-component{
+  font-family: var(--font-family);
+}
+
+.monday-style-attention-box-component__title-container__title{
+  font-family: var(--title-font-family);
+}
