modal css fixess

--- a/src/components/ModalHeader/ModalHeader.module.scss
+++ b/src/components/ModalHeader/ModalHeader.module.scss
@@ -9,6 +9,7 @@
     font-weight: var(--font-weight-bold);
     color: var(--primary-text-color);
     flex-grow: 1;
+    margin-block-start: var(--spacing-large);
     margin-block-end: 0;
 
   }
