--- a/src/storybook/styles/typography.scss
+++ b/src/storybook/styles/typography.scss
@@ -1,4 +1,5 @@
 @import "../../styles/global-css-settings";
+@import "./content-spacing";
 
 // font family
 $header-primary-font: "Sofia Pro", Roboto, sans-serif;
@@ -40,4 +41,15 @@ $text-line-height: 24px;
 @mixin small-text {
   @include basic-text;
   @include small-text-without-color;
+}
+
+@mixin title-appearance{
+  margin-bottom: $spacing-between-title-to-content;
+  font-family: $text-primary-font;
+  @include basic-text;
+  font-size: $h3-font-size;
+  line-height: 28px;
+  letter-spacing: -0.21px;
+  text-align: left;
+  font-weight: 300;
 }
