--- a/src/components/Dialog/Dialog.scss
+++ b/src/components/Dialog/Dialog.scss
@@ -15,7 +15,7 @@ $arrow-size: 12px;
   position: absolute;
   border-radius: 2px;
 
-  background-color: $white-theme-bg-color;
+  background-color: var(--secondary-background-color);
 
   &[data-placement*="bottom"] {
     top: 1px;
