--- a/src/config/tokens/core/_core-fonts.scss
+++ b/src/config/tokens/core/_core-fonts.scss
@@ -25,7 +25,7 @@ $font-weight-normal: 400;
 $font-weight-bold: 500;
 
 // - Font family
-$font-family: "Manrope", "Roboto", "Rubik", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
+$font-family: "Figtree", "Roboto", "Rubik", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
 $title-font-family: "Poppins", "Roboto", "Rubik", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
 $h1-font-family: var(--title-font-family);
 
