--- a/src/storybook/stand-alone-documentaion/welcome/intro/intro.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/intro/intro.scss
@@ -1,4 +1,4 @@
-@import "../../../components/title/title";
+@import "../../../styles/typography";
 
 .monday-storybook-intro {
   @include title-appearance;
