Fix lint errors - fix

--- a/src/components/AvatarGroup/AvatarGroupCounter.module.scss
+++ b/src/components/AvatarGroup/AvatarGroupCounter.module.scss
@@ -1,5 +1,5 @@
 @use "sass:math";
-// eslint-disable-next-line scss/at-import-partial-extension
+/* stylelint-disable-next-line scss/at-import-partial-extension */
 @import "../../components/Avatar/Avatar.module.scss";
 
 .counterContainer {
