--- a/src/storybook/styles/typography.scss
+++ b/src/storybook/styles/typography.scss
@@ -1,7 +1,7 @@
 @import "../../styles/global-css-settings";
 
 // font family
-$header-primary-font: "Sofia Pro", Roboto, sans-serif;
+$header-primary-font: var(--title-font-family);
 $text-primary-font: var(--font-family);
 
 // sizes
