--- a/src/components/Heading/Heading.scss
+++ b/src/components/Heading/Heading.scss
@@ -6,8 +6,8 @@
   border: 1px solid transparent;
   border-radius: $border-radius-small;
   min-width: 0;
-
   @include heading-padding();
+  @include font-main();
 
   &.multi-line-ellipsis {
     @include line-clamp(var(--heading-clamp-lines));
@@ -25,4 +25,59 @@
       @include theme-prop(border-color, ui-border-color);
     }
   }
+}
+
+// Override tags styles
+.element-type-h1 {
+  font-size: $h1-legacy-font-size;
+  line-height: $h1-legacy-line-height;
+  font-weight: var(--font-weight-bold);
+  font-family: var(--title-font-family);
+  -webkit-font-smoothing: var(--font-smoothing-webkit);
+  -moz-osx-font-smoothing: var(--font-smoothing-moz);
+
+  &.size-small,
+  &.size-medium {
+    font-size: var(--font-size-h2);
+    line-height: var(--font-line-height-h2);
+  }
+}
+
+.element-type-h2 {
+  @include font-title();
+  &.size-small,
+  &.size-medium {
+    @include font-subtitle();
+  }
+}
+.element-type-h3 {
+  @include font-title-secondary();
+  &.size-small,
+  &.size-medium {
+    @include font-subtitle();
+  }
+}
+
+.element-type-h4 {
+  @include font-subtitle();
+}
+
+.element-type-h5 {
+  @include font-paragraph-bold();
+}
+
+.element-type-h6 {
+  @include font-general-text();
+}
+
+.element-type-p {
+  @include font-paragraph();
+}
+
+.element-type-small {
+  @include font-caption();
+}
+
+.element-type-link {
+  @include font-link();
 }
