--- a/src/components/AttentionBox/AttentionBox.scss
+++ b/src/components/AttentionBox/AttentionBox.scss
@@ -11,6 +11,10 @@
   height: fit-content;
   @include theme-prop(color, dark-color);
 
+  &__title {
+    margin: 0;
+  }
+
   &_text--compact {
     display: flex;
     align-items: center;
@@ -65,19 +69,12 @@
   }
 
   &__title-container {
-    display: flex;
-    align-items: center;
-    margin-top: 0;
     margin-bottom: var(--spacing-small);
-
     &__icon {
-      margin-right: var(--spacing-small);
+      margin-right: var(--spacing-xs);
     }
 
-    &__title {
-      font-size: 18px;
-      font-weight: 500;
-    }
+
   }
 
   &__close-icon {
