--- a/src/components/Dropdown/components/menu/menu.scss
+++ b/src/components/Dropdown/components/menu/menu.scss
@@ -6,6 +6,7 @@
   &--fixed-position {
     // When inside a scrollable area, we want the menu to appear above the scrollable container (we set the specific position by js)
     position: fixed !important;
+    top: auto !important;
   }
 }
 
