Dropdown disabled styles: placeholder, dropdown-indicator, chips (with border override so they have the same color as Dropdown background)

--- a/src/components/Dropdown/components/ValueContainer/ValueContainer.module.scss
+++ b/src/components/Dropdown/components/ValueContainer/ValueContainer.module.scss
@@ -13,6 +13,10 @@
   margin: 5px 2px;
 }
 
+.multiselect-chip-disabled {
+  border: var(--disabled-text-color) var(--border-width) solid;
+}
+
 .value-container {
   display: flex;
   align-items: center;
