Support all edge cases for multi select drop with counter (hidden chips in dropdown with defined width edge case) (#999)
* wip

* fix small bugs

* fix tests

* fixes

* fixes

--- a/src/components/Dropdown/components/MultiValueContainer/MultiValueContainer.module.scss
+++ b/src/components/Dropdown/components/MultiValueContainer/MultiValueContainer.module.scss
@@ -1,6 +1,10 @@
 @import "../../../../styles/themes";
 @import "../../../../styles/typography";
 
+.chip-with-input-wrapper {
+  display: flex;
+  min-height: 30px;
+}
 .placeholder-container {
   margin-left: 6px;
 }
