--- a/src/config/maps/themes/basic/keys/_keys.scss
+++ b/src/config/maps/themes/basic/keys/_keys.scss
@@ -8,6 +8,7 @@ $theme-basic-keys: (
         primary-color: $primary-color,
         primary-hover-color: $primary-hover-color,
         primary-selected-color: $primary-selected-color,
+        primary-selected-hover-color: $primary-selected-hover-color,
         primary-text-color: $primary-text-color,
         text-color-on-primary: $text-color-on-primary,
         text-color-on-inverted: $text-color-on-inverted,
@@ -26,9 +27,11 @@ $theme-basic-keys: (
         positive-color: $positive-color,
         positive-color-hover: $positive-color-hover,
         positive-color-selected: $positive-color-selected,
+        positive-color-selected-hover: $positive-color-selected-hover,
         negative-color: $negative-color,
         negative-color-hover: $negative-color-hover,
         negative-color-selected: $negative-color-selected,
+        negative-color-selected-hover: $negative-color-selected-hover,
         private-color: $private-color,
         shareable-color: $shareable-color,
         ui-border-color: $ui-border-color,
