--- a/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
+++ b/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
@@ -9,6 +9,7 @@ $theme-dark-keys: (
         primary-on-secondary-color: $theme-dark-primary-on-secondary-color,
         primary-hover-color: $theme-dark-primary-hover-color,
         primary-selected-color: $theme-dark-primary-selected-color,
+        primary-selected-hover-color: $theme-dark-primary-selected-hover-color,
         primary-text-color: $theme-dark-primary-text-color,
         text-color-on-primary: $theme-dark-text-color-on-primary,
         text-color-on-inverted: $theme-dark-text-color-on-inverted,
@@ -27,9 +28,11 @@ $theme-dark-keys: (
         positive-color: $theme-dark-positive-color,
         positive-color-hover: $theme-dark-positive-color-hover,
         positive-color-selected: $theme-dark-positive-color-selected,
+        positive-color-selected-hover: $theme-dark-positive-color-selected-hover,
         negative-color: $theme-dark-negative-color,
         negative-color-hover: $theme-dark-negative-color-hover,
         negative-color-selected: $theme-dark-negative-color-selected,
+        negative-color-selected-hover: $theme-dark-negative-color-selected-hover,
         private-color: $theme-dark-private-color,
         shareable-color: $theme-dark-shareable-color,
         ui-border-color: $theme-dark-ui-border-color,
