--- a/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
+++ b/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
@@ -8,6 +8,7 @@ $theme-hacker-keys: (
         primary-color: $theme-hacker-primary-color,
         primary-hover-color: $theme-hacker-primary-hover-color,
         primary-selected-color: $theme-hacker-primary-selected-color,
+        primary-selected-hover-color: $theme-hacker-primary-selected-hover-color,
         primary-text-color: $theme-hacker-primary-text-color,
         text-color-on-inverted: $theme-hacker-text-color-on-inverted,
         secondary-text-color: $theme-hacker-secondary-text-color,
@@ -25,9 +26,11 @@ $theme-hacker-keys: (
         positive-color: $theme-hacker-positive-color,
         positive-color-hover: $theme-hacker-positive-color-hover,
         positive-color-selected: $theme-hacker-positive-color-selected,
+        positive-color-selected-hover: $theme-hacker-positive-color-selected-hover,
         negative-color: $theme-hacker-negative-color,
         negative-color-hover: $theme-hacker-negative-color-hover,
         negative-color-selected: $theme-hacker-negative-color-selected,
+        negative-color-selected-hover: $theme-hacker-negative-color-selected-hover,
         private-color: $theme-hacker-private-color,
         shareable-color: $theme-hacker-shareable-color,
         ui-border-color: $theme-hacker-ui-border-color,
