--- a/src/config/tokens/themes/basic/keys/_keys.scss
+++ b/src/config/tokens/themes/basic/keys/_keys.scss
@@ -13,6 +13,7 @@
 $primary-color: $color-basic_blue;
 $primary-hover-color: $color-dark_blue;
 $primary-selected-color: $color-highlight_blue;
+$primary-selected-hover-color: $color-sky_blue;
 $primary-text-color: $color-mud_black;
 
 $text-color-on-primary: $color-snow_white;
@@ -40,9 +41,11 @@ $disabled-background-color: $color-ui_grey-muted;
 $positive-color: $color-success;
 $positive-color-hover: $color-success-hover;
 $positive-color-selected: $color-success-highlight;
+$positive-color-selected-hover: $color-olive_green;
 $negative-color: $color-error;
 $negative-color-hover: $color-error-hover;
 $negative-color-selected: $color-error-highlight;
+$negative-color-selected-hover: $color-pinky_red;
 $private-color: $color-bazooka;
 $shareable-color: $color-purple;
 
