--- a/src/config/tokens/themes/basic/palette/_palette.scss
+++ b/src/config/tokens/themes/basic/palette/_palette.scss
@@ -7,15 +7,18 @@
 $color-basic_blue: #0073ea;
 $color-dark_blue: #0060b9;
 $color-highlight_blue: #cce5ff;
+$color-sky_blue: #aed4fc;
 
 // - Semantics
 $color-basic_green: #258750;
 $color-dark_green: #007038;
 $color-pastel_green: #bbdbc9;
+$color-olive_green: #b5cec0;
 
 $color-basic_red: #d83a52;
 $color-blood_red: #b63546;
 $color-pastel_red: #f4c3cb;
+$color-pinky_red: #ecb7bf;
 
 $color-purple: #a25ddc; // content color duplication
 $color-bazooka: #f65f7c;
