--- a/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
+++ b/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
@@ -6,11 +6,14 @@
 // Colors
 // - Brand
 $color-ocean_blue: #133774;
+$color-deep_blue: #0d2e65;
 
 // - Semantics
 $color-forest_green: #26503e;
+$color-darker_green: #194733;
 
 $color-maroon_red: #642830;
+$color-amber_red: #5a2027;
 
 // Natural / Gray
 $color-midnight: #181b34;
