Disabled chip in multiSelect: change backgroundColor instead of border

--- a/src/components/Dropdown/components/MultiValueContainer/MultiValueContainer.module.scss
+++ b/src/components/Dropdown/components/MultiValueContainer/MultiValueContainer.module.scss
@@ -18,7 +18,7 @@
 }
 
 .multiselect-chip-disabled {
-  border: var(--disabled-text-color) var(--border-width) solid;
+  background-color: var(--primary-background-hover-color) !important;
 }
 
 .value-container {
