Feature/sergeyro/dropdown disabled color fix (#1010)
* Dropdown disabled text color fix to --disabled-text-color

* Fix chips disabled styles

* Dropdown disabled styles: placeholder, dropdown-indicator, chips (with border override so they have the same color as Dropdown background)

* Update dropdown snapshots (due to react-select issues with snapshots)

* Fix scss import path

* Dropdown-multi disabled stories

* Fix PR notes - refactor

* Update snapshots

* Fix dropdown disabled story options types

* Refactor

* Fix merge conflict

* Disabled chip in multiSelect: change backgroundColor instead of border

--- a/src/components/Dropdown/components/MultiValueContainer/MultiValueContainer.module.scss
+++ b/src/components/Dropdown/components/MultiValueContainer/MultiValueContainer.module.scss
@@ -17,6 +17,10 @@
   margin: 5px 2px;
 }
 
+.multiselect-chip-disabled {
+  background-color: var(--primary-background-hover-color) !important;
+}
+
 .value-container {
   display: flex;
   align-items: center;
