--- a/src/components/Chips/Chips.module.scss
+++ b/src/components/Chips/Chips.module.scss
@@ -3,14 +3,26 @@
 @import "../../styles/states";
 @import "../../styles/keyframes";
 
+.chipsWrapper {
+  margin: 0 var(--spacing-xs);
+  align-items: center;
+  height: 24px;
+  display: inline-flex;
+}
+
+.clickableWrapper {
+  height: 100%;
+  width: 100%;
+}
+
 .chips {
   display: inline-flex;
   overflow: hidden;
-  height: 24px;
+  height: 100%;
+  width: 100%;
   border-radius: 4px;
   padding: 1px 8px;
   align-items: center;
-  margin: 0 var(--spacing-xs);
   user-select: none;
   animation: chips-pop-in-emphasized var(--motion-productive-medium) var(--motion-timing-emphasize);
 
