--- a/src/components/SplitButton/SplitButton.scss
+++ b/src/components/SplitButton/SplitButton.scss
@@ -39,40 +39,19 @@
           &-primary {
             &.monday-style-split-button--main-active {
               .monday-style-split-button__main-button {
-                background-color: var(--primary-selected-hover-color);
+                background-color: var(--primary-selected-color);
               }
 
               .monday-style-split-button__secondary-button {
                 background-color: var(--primary-selected-color);
               }
 
-              &.monday-style-split-button--split-content-open {
-                .monday-style-split-button__main-button {
-                  .monday-style-split-button__main-button {
-                    background-color: var(--primary-selected-color);
-                  }
-
-                  .monday-style-split-button__secondary-button {
-                    background-color: var(--primary-selected-hover-color) !important;
-                  }
-                }
-              }
-
               &.monday-style-split-button--split-content-open,
               &.monday-style-split-button--hovered {
-                &:not(.monday-style-split-button--main-active) {
-                  .monday-style-split-button__secondary-button {
-                    border-color: transparent;
-                    @include theme-prop(background-color, primary-background-hover-color);
-
-                  }
-                }
-
                 &.monday-style-split-button--split-content-open {
                   .monday-style-split-button__secondary-button,
                   .monday-style-split-button__secondary-button:hover {
                     @include theme-prop(color, primary-color);
-                    @include theme-prop(background-color, primary-selected-color);
                   }
                 }
               }
@@ -130,6 +109,11 @@
       &:not(.monday-style-split-button--disabled).monday-style-split-button {
         &--color {
           &-primary {
+            &.monday-style-split-button--main-active {
+              .monday-style-split-button__secondary-button {
+                background-color: var(--primary-hover-color);
+              }
+            }
             .monday-style-split-button__secondary-button {
               border-left: 1px solid;
 
@@ -173,20 +157,11 @@
           &-primary {
             &.monday-style-split-button--main-active {
               .monday-style-split-button__main-button {
-                background-color: var(--primary-selected-hover-color);
+                background-color: var(--primary-selected-color);
               }
               .monday-style-split-button__secondary-button {
                 background-color: var(--primary-selected-color);
                 border-color: var(--primary-color);
-              }
-
-              &.monday-style-split-button--split-content-open {
-                .monday-style-split-button__main-button {
-                  background-color: var(--primary-selected-color);
-                }
-                .monday-style-split-button__secondary-button {
-                  background-color: var(--primary-selected-hover-color) !important;
-                }
               }
             }
 
