fix split button ui for active state

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -302,7 +302,7 @@
         @include theme-prop(color, disabled-text-color);
         cursor: not-allowed;
         pointer-events: none;
-        &:hover, {
+        &:hover {
           background-color: transparent;
         }
       }
