Same behaviour for active button ,active split button and active icon button (#1037)
* create the same behaviour for active button and icon button

* fix

* fix snapshot

* fix split button and hover state

* fix split button ui for active state

* fix split button ui for active state

* fix split button ui for active state

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -193,9 +193,12 @@
         }
         &--color {
           &-primary {
-            &-active,
-            &:hover,
-            &:focus {
+            &-active, &-active:hover {
+              background-color: var(--primary-selected-color);
+              border-color: var(--primary-color);
+            }
+            &:hover:not(.monday-style-button--color-primary-active),
+            &:focus:not(.monday-style-button--color-primary-active) {
               @include theme-prop(background-color, primary-background-hover-color);
             }
           }
@@ -249,9 +252,11 @@
       &.monday-style-button {
         &--color {
           &-primary {
-            &-active,
-            &:hover,
-            &:focus {
+            &-active, &-active:hover {
+              background-color: var(--primary-selected-color);
+            }
+            &:hover:not(.monday-style-button--color-primary-active),
+            &:focus:not(.monday-style-button--color-primary-active){
               @include theme-prop(background-color, primary-background-hover-color);
             }
           }
