Revert "TS-migration: Tipseen + some constants usage refactoring (#998)"
This reverts commit c0b058a408c93247bb0e738653b06c5916dda78f.

# Conflicts:
#	src/components/Tooltip/Tooltip.tsx

--- a/src/components/Tipseen/Tipseen.module.scss
+++ b/src/components/Tipseen/Tipseen.module.scss
@@ -2,37 +2,39 @@
 @import "../../styles/typography";
 @import "../../styles/global-css-settings";
 
-.wrapper {
-  min-width: 100px;
-  min-height: 40px;
-  padding: 0;
-  border-radius: $border-radius-medium;
-}
+.tipseen {
+  &Wrapper {
+    min-width: 100px;
+    min-height: 40px;
+    padding: 0;
+    border-radius: $border-radius-medium;
 
-.wrapperWithoutCustomWidth {
-  max-width: 320px;
-}
+    &WithoutCustomWidth {
+      max-width: 320px;
+    }
+  }
 
-.header {
-  display: flex;
-  justify-content: flex-start;
-}
+  &Header {
+    display: flex;
+    justify-content: flex-start;
+  }
 
-.title {
-  padding: $spacing-medium $spacing-medium 0 $spacing-medium;
-}
+  &Title {
+    padding: $spacing-medium $spacing-medium 0 $spacing-medium;
+  }
 
-.content {
-  @include font-default;
-  @include theme-prop(color, text-color-on-primary);
-}
+  &Content {
+    @include font-default;
+    @include theme-prop(color, text-color-on-primary);
+  }
 
-.closeButton {
-  position: absolute;
-  top: $spacing-xs;
-  right: $spacing-xs;
-}
+  &CloseButton {
+    position: absolute;
+    top: $spacing-xs;
+    right: $spacing-xs;
 
-.closeButtonOnImage {
-  z-index: 2;
+    &OnImage {
+      z-index: 2;
+    }
+  }
 }
