Revert "Heading Weights (#1041)"
This reverts commit de5ae6b28b607bef9500decfe3e273d199bfd0f0.

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -79,7 +79,7 @@ $small-empty-state-height: 12px;
 }
 
 @mixin line-clamp($lines: 1le) {
-  overflow-x: hidden;
+  overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: $lines;
   -webkit-box-orient: vertical;
@@ -91,7 +91,7 @@ $small-empty-state-height: 12px;
 }
 
 @mixin ellipsis {
-  overflow-x: hidden;
+  overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
