--- a/src/components/Tipseen/Tipseen.module.scss
+++ b/src/components/Tipseen/Tipseen.module.scss
@@ -2,39 +2,39 @@
 @import "../../styles/typography";
 @import "../../styles/global-css-settings";
 
-.tipseen {
-  &Wrapper {
-    min-width: 100px;
-    min-height: 40px;
-    padding: 0;
-    border-radius: $border-radius-medium;
+:global(.monday-style-tooltip).tipseenWrapper {
+  min-width: 100px;
+  min-height: 40px;
+  padding: 0;
+  border-radius: $border-radius-medium;
 
-    &WithoutCustomWidth {
-      max-width: 320px;
+  &WithoutCustomWidth {
+    max-width: 320px;
+  }
+
+  .tipseen {
+    &Header {
+      display: flex;
+      justify-content: flex-start;
     }
-  }
 
-  &Header {
-    display: flex;
-    justify-content: flex-start;
-  }
+    &Title {
+      padding: $spacing-medium $spacing-medium 0 $spacing-medium;
+    }
 
-  &Title {
-    padding: $spacing-medium $spacing-medium 0 $spacing-medium;
-  }
+    &Content {
+      @include font-default;
+      @include theme-prop(color, text-color-on-primary);
+    }
 
-  &Content {
-    @include font-default;
-    @include theme-prop(color, text-color-on-primary);
-  }
+    &CloseButton {
+      position: absolute;
+      top: $spacing-xs;
+      right: $spacing-xs;
 
-  &CloseButton {
-    position: absolute;
-    top: $spacing-xs;
-    right: $spacing-xs;
-
-    &OnImage {
-      z-index: 2;
+      &OnImage {
+        z-index: 2;
+      }
     }
   }
 }
