Added Icon with ToolTip to TextField
Signed-off-by: Merom Cohen <meromco@monday.com>

--- a/src/components/FieldLabel/FieldLabel.scss
+++ b/src/components/FieldLabel/FieldLabel.scss
@@ -18,6 +18,11 @@
   }
 }
 
+.label-component--tooltipicon {
+  margin-left: var(--spacing-xs);
+  display: flex;
+}
+
 .label-component--wrapper .label-component--icon{
   font-family: var(--font-family)
 }
