add withoutMargin prop

--- a/src/components/Divider/Divider.scss
+++ b/src/components/Divider/Divider.scss
@@ -19,7 +19,7 @@
     width: 1px;
 
     &.monday-style-divider--with-margin  {
-      margin: 0 var(--spacing);
+      margin: 0 var(--spacing-xs);
     }
   }
 }
