Skeleton - wrapperClassName and fullWidth props added (#1080)
* Skeleton - wrapperClassName added

* fullWidth prop added

* fullWidth default value

* fullWidth in css modules

* Comment refactor

--- a/src/components/Skeleton/Skeleton.scss
+++ b/src/components/Skeleton/Skeleton.scss
@@ -46,6 +46,8 @@
 }
 
 .monday-style-skeleton {
+  display: flex;
+
   &_rectangle {
     $rectangle-default-size: 160px;
     height: $rectangle-default-size;
