--- a/src/components/Divider/Divider.scss
+++ b/src/components/Divider/Divider.scss
@@ -5,21 +5,19 @@
 .monday-style-divider {
   @include theme-prop(background-color, layout-border-color);
 
+  &.monday-style-divider--without-margin  {
+    margin: 0;
+  }
+
   &--horizontal {
     height: 1px;
     width: 100%;
-
-    &.monday-style-divider--with-margin  {
-      margin: var(--spacing-small) 0;
-    }
+    margin: var(--spacing-small) 0;
   }
 
   &--vertical {
     height: 100%;
     width: 1px;
-
-    &.monday-style-divider--with-margin  {
-      margin: 0 var(--spacing-xs);
-    }
+    margin: 0 var(--spacing-xs);
   }
 }
