--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -6,7 +6,7 @@
 
 .container {
   --monday-modal-z-index: 10000;
-  z-index:10000;
+  z-index: var(--monday-modal-z-index);
   display: flex;
   justify-content: center;
   align-items: center;
