add story for virtualized combobox with sticky categories (because this state is common and was damaged and we did not know about it because it's not in our storybook)

--- a/src/components/Combobox/__stories__/combobox.stories.scss
+++ b/src/components/Combobox/__stories__/combobox.stories.scss
@@ -1,6 +1,9 @@
 @import "../../../styles/states";
 
 .combobox-stories-styles {
+  &_virtualized-description {
+    width: 300px
+  }
   &_category-wrapper {
     width: 300px;
   }
