fix modal title font family

--- a/src/components/ModalHeader/ModalHeader.module.scss
+++ b/src/components/ModalHeader/ModalHeader.module.scss
@@ -5,6 +5,7 @@
   margin-block-end: var(--spacing-large);
 
   .title {
+    font-family: var(--title-font-family);
     font-size: var(--font-size-h2);
     font-weight: var(--font-weight-bold);
     color: var(--primary-text-color);
