--- a/src/components/Toast/__stories__/toast.stories.scss
+++ b/src/components/Toast/__stories__/toast.stories.scss
@@ -15,6 +15,7 @@
     margin-top: 0;
     &.big {
       width: 420px;
+      // TODO remove override
       .monday-style-toast-content {
         justify-content: center;
       }
