--- a/src/storybook/stand-alone-documentaion/welcome/other-contributors-list/other-contributors-list.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/other-contributors-list/other-contributors-list.scss
@@ -3,7 +3,7 @@
 
 .monday-other-contributors-list {
   margin-top: $spacing-between-section-items;
-  &_developer:not(:last-child):after {
+  &_contributor:after {
     @include small-text;
     content: ","
   }
