Rename storybook classes to be with prefix monday-storybook-*

--- a/src/components/Chips/__stories__/chips.stories.scss
+++ b/src/components/Chips/__stories__/chips.stories.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/themes";
 @import "../../../styles/typography";
 
-.monday-style-story-chips {
+.monday-storybook-chips {
   &_search-bar {
     display: flex;
     flex-direction: column;
