--- a/src/components/Steps/__stories__/steps.stories.scss
+++ b/src/components/Steps/__stories__/steps.stories.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/typography";
 @import "../../../styles/themes";
 
-.monday-style-story-steps {
+.monday-storybook-steps {
   &_inline-wrapper {
     display: flex;
     align-items: center;
